# python_code_reviewer

./: .gitignore  README.md  pyproject.toml
src/reviewer/: client_part.py  schemas.py  server_part.py
